--- a/.classpath
+++ b/.classpath
@@ -54,5 +54,6 @@
 	<classpathentry kind="lib" path="C:/Users/Patrick/Desktop/eclipse/javacv-bin/videoinput.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Patrick/Desktop/eclipse/javacv-bin/videoinput-windows-x86.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Patrick/Desktop/eclipse/javacv-bin/videoinput-windows-x86_64.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
